# Lancilotto-agent

./: .dockerignore  .gitignore  .railwayignore  CHANGELOG.md  COIN_SCREENER_SETUP.md  DOCKER_OPTIMIZATION_README.md  Dockerfile  Dockerfile.prod  Guida al Deploy di _Lancilotto-agent_ su Railway (Interfaccia Web).md  IMPLEMENTATION_SUMMARY.txt  Makefile  PRODUCTION_README.md  RAILWAY_DEPLOY_GUIDE.md  README.md  RISK_MANAGEMENT_VERIFICATION.md  SCREENER_CHANGELOG.md  benchmark-build.sh  build.sh  docker-compose.prod.override.yml  docker-compose.prod.yml  docker-compose.yml  env.prod.example  hyperliquid_trader.py  main.py  metrics.py  nixpacks.toml  notifications.py  package.json  pnpm-lock.yaml  production-deploy.sh  requirements.txt  risk_manager.py  scheduler.py  system_prompt.txt  trading_agent.py
backend/: .env_prod  DATA_TRACKING_ANALYSIS.md  INTEGRATION_COMPLETE.md  STARTUP_NOTIFICATION.md  TELEGRAM_BOT_GUIDE.md  TELEGRAM_BOT_README.md  TOKEN_TRACKING_GUIDE.md  TREND_SYSTEM_INTEGRATION.md  TREND_SYSTEM_README.md  backtrack_analysis.py  env.example  example_telegram_integration.py  forecaster.py  hyperliquid_trader.py  hyperliquid_utils.py  indicators.py  main.py  manual_analysis.py  model_manager.py  notifications.py  pyproject.toml  reset_token_stats.py  scheduler.py  system_prompt.txt  telegram_bot.py  test_telegram_notification.py  token_tracker.py  trading_agent.py  trading_engine.py  trend_confirmation.py  whalealert.py
backend/coin_screener/: README.md  db_utils.py  models.py  scoring.py  screener.py  test_screener.py
backend/market_data/: aggregator.py  (+5 more)
(+48 files in other folders)
