[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-agent-backend"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "websockets",
    "requests",
    "apscheduler",
    "pandas>=2.3.3",
    "ccxt>=4.0.0",
    "python-dotenv",
    "openai",
    "psycopg2-binary",
    "hyperliquid-python-sdk",
    "ta",
    "prophet",
    "eth-account",
    "numpy",
    "python-telegram-bot>=20.0",
    "statsmodels",
    #"torch",
    "scikit-learn",
    "PyYAML",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
